--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "codemirror": "^5.65.2",
+    "express": "^4.17.3",
+    "react-avatar": "^4.0.0",
+    "react-hot-toast": "^2.2.0",
+    "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
